# chatMol

./: README.md  pyproject.toml  pytest.ini  server.py
chatmol/: __init__.py  io.py  properties.py
examples/: sample_compounds.csv
tests/: test_csv_processing.py  test_io.py  test_properties.py
